--- a/index.html
+++ b/index.html
@@ -1,30 +1,62 @@
-<!doctype html>
-<html lang="pt-br">
+<!DOCTYPE html>
+<html>
 <head>
-
-    <title>Bootstrap - botões</title>
-
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <!-- Bootstrap CSS -->
+	<title></title>
+	<style type="text/css">
+		body{
+			background-image: url('bg.jpg');
+			background-repeat: no-repeat;
+		}
+		.mosca1{
+			width: 50px;
+			height: 50px;
+		}
+		.mosca2{
+			width: 70px;
+			height: 70px;
+		}
+		.mosca3{
+			width: 90px;
+			height: 90px;
+		}
+		.ladoA{
+			transform: scale(1);
+		}
+		.ladoB{
+			transform: scale(-1);
+		}
+		.painel{
+			position: absolute;
+			width: 190px;
+			padding: 10px;
+			left: 0px;
+			bottom: 0px;
+			border-top: solid 1px #fff;
+			background-color: #fff;
+			opacity: 0.7;
+		}
+		.vidas{
+			float:left;
+		}
+		.cronometro{
+			float: left;
+			font-size: 20px;
+			font-weight: bold;
+		}
+	</style>
+	<script src="jogo.js"></script>
 </head>
-<body>
-    <nav class="navbar navbar-dark bg-dark fixed-top">
-        <a href="" class="navbar-brand">home</a>
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#navegacao">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navegacao">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a href="#localizacao" class="nav-link">Localização</a></li>
-            </ul>            
-        </div>
-    </nav>
-        <div style="height: 900px; border:solid;"></div>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<body onresize="tamanhoDaTela()">
+	<div class="painel" >
+		<div class="vidas">
+			<img id="v1" src="coracao_cheio.png"/>
+			<img id="v2" src="coracao_cheio.png"/>
+			<img id="v3" src="coracao_cheio.png"/>
+		</div>
+		<div class="cronometro">Tempo restante: ?</div>
+	</div>
 </body>
+<script type="text/javascript">
+	setInterval(function(){ randomica()}, 1000);
+</script>
 </html>
