--- a/index.html
+++ b/index.html
@@ -2,61 +2,57 @@
 <html>
 <head>
 	<title></title>
-	<style type="text/css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<style type="text/css">
 		body{
 			background-image: url('bg.jpg');
 			background-repeat: no-repeat;
 		}
-		.mosca1{
-			width: 50px;
-			height: 50px;
-		}
-		.mosca2{
-			width: 70px;
-			height: 70px;
-		}
-		.mosca3{
-			width: 90px;
-			height: 90px;
-		}
-		.ladoA{
-			transform: scale(1);
-		}
-		.ladoB{
-			transform: scale(-1);
-		}
-		.painel{
-			position: absolute;
-			width: 190px;
-			padding: 10px;
-			left: 0px;
-			bottom: 0px;
-			border-top: solid 1px #fff;
-			background-color: #fff;
-			opacity: 0.7;
-		}
-		.vidas{
-			float:left;
-		}
-		.cronometro{
-			float: left;
-			font-size: 20px;
-			font-weight: bold;
-		}
-	</style>
-	<script src="jogo.js"></script>
+		</style>
 </head>
-<body onresize="tamanhoDaTela()">
-	<div class="painel" >
-		<div class="vidas">
-			<img id="v1" src="coracao_cheio.png"/>
-			<img id="v2" src="coracao_cheio.png"/>
-			<img id="v3" src="coracao_cheio.png"/>
+<body>
+	<div class="container">
+		<div class="row" >
+			<div class="col">
+				<div class="d-flex justify-content-center">
+					<img src="game.png">
+				</div>
+			</div>
 		</div>
-		<div class="cronometro">Tempo restante: ?</div>
+
+		<div class="row" >
+			<div class="col">
+				<div class="d-flex justify-content-center">
+					<div class="mb-2">
+						<select id="Selecione" class="form-control">
+							<option value="">Selecione o nivel</option>
+							<option value="facil" >Facil</option>
+							<option value="normal">Normal</option>
+							<option value="dificil">Dificil</option>
+						</select>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="row" >
+			<div class="col">
+				<div class="d-flex justify-content-center">
+					<button class="btn btn-danger" onclick="iniciar()">Iniciar</button>
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
-<script type="text/javascript">
-	setInterval(function(){ randomica()}, 1000);
-</script>
+		<script type="text/javascript">
+			function iniciar(){
+				var nivel=document.getElementById('Selecione').value;
+				if(nivel==""){
+					alert("selecione um nivel")
+					return false;
+				}else{
+					window.location.href="app.html?"+nivel;
+				}
+			}
+		</script>
 </html>
