--- a/vitoria.html
+++ b/vitoria.html
@@ -15,7 +15,7 @@
 		<div class="row" >
 			<div class="col">
 				<div class="d-flex justify-content-center">
-					<img src="game_over.png">
+					<img src="vitoria.png">
 				</div>
 			</div>
 		</div>
